# stix2-to-digraph

./: README.md  pyproject.toml
stix2_to_digraph/: cli.py  converter.py  json.py
